--- a/css/vinos.css
+++ b/css/vinos.css
@@ -1,25 +1,29 @@
-html{
+html {
   background-color: black !important;
 }
 
 nav {
   color: #ffffff;
-  background-image: linear-gradient(to right, hsla(0, 0%, 0%, 1), hsla(327, 98%, 17% , 1));
-  font-family: 'Kaushan Script', cursive;
+  background-image: linear-gradient(
+    to right,
+    hsla(0, 0%, 0%, 1),
+    hsla(327, 98%, 17%, 1)
+  );
+  font-family: "Kaushan Script", cursive;
   size: 40px;
-  text-decoration: none !important;  
+  text-decoration: none !important;
 }
 
-p{
+p {
   color: #ffffff;
-  font-family: 'Kaushan Script', Courier;
+  font-family: "Kaushan Script", Courier;
   size: 20px;
 }
 
 .secciones {
   background-color: black;
   border: solid 2px;
-  border-color:white;
+  border-color: white;
 }
 
 .textoNeonRojo {
@@ -32,31 +36,30 @@ p{
   font-size: 3rem;
 }
 
-.caja{
-width: 100%;
-height: 100%;
-filter:grayscale(100%);
-transition: 1s ease-out;
+.caja {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: 1s ease-out;
 }
 
-.caja:hover{
-  filter:grayscale(0%);
+.caja:hover {
+  filter: grayscale(0%);
   transition: 1s ease-in;
- }
-
-.caja p{
-top: 50%;
-left: 10%;
-position: absolute;
-filter: opacity(0%);
-transition: 0.5s;
-background-color: hsla(0, 0%, 0%, 60%);
 }
 
+.caja p {
+  top: 50%;
+  left: 10%;
+  position: absolute;
+  filter: opacity(0%);
+  transition: 0.5s;
+  background-color: hsla(0, 0%, 0%, 60%);
+}
 
-.caja:hover p{
+.caja:hover p {
   filter: opacity(100%);
   transition: 0.5s;
   z-index: 3;
 }
-/* .objeto:comporamiento objeto2*/ 
+/* .objeto:comporamiento objeto2*/
